# GroceryView

./: .env.example  .eslintrc.json  .gitignore  .lighthouserc.json  CHANGELOG.md  CLAUDE.md  COMPETITIVE-ANALYSIS.md  CONTRIBUTING.md  GOAL.md  PROPOSAL.md  README.md  ROADMAP.md  SECURITY.md  claims.txt  codex-prompts-backend-api.txt  codex-prompts-data-worker.txt  codex-prompts-db-schema.txt  codex-prompts-frontend-web.txt  codex-prompts-grocery-pr-rescue.txt  codex-prompts-meta.txt  codex-prompts-mobile.txt  codex-prompts-product.txt  codex-prompts-research.txt  docker-compose.yml  jest.config.ts  lighthouserc.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  renovate.json  sentry.config.ts  tsconfig.base.json  tsconfig.json  turbo.json  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md  repository-ruleset.json
api/: [...path].mjs
codex-tasks/: backend-api-tasks.md  claims.txt  data-worker-tasks.md  db-schema-tasks.md  frontend-web-tasks.md  open.txt  research.txt
db/: schema.sql
deploy/: groceryview.manifest.json
docs/: ARCHITECTURE.md  GLOSSARY.md  PRIVACY.md  PROJECT_STANDARDS.md  api.md  architecture.md  category-coverage.md  chain-confidence.md  competitor-analysis.md  coverage-audit.md  data-sources.md  (+18 more)
workers/data-pipeline/: .env.example  .gitignore  README.md  package.json  pyproject.toml
workers/data-pipeline/groceryview_data_pipeline/: __init__.py  assets.py  definitions.py  fixtures.py  models.py
workers/data-pipeline/scripts/: smoke_dagster_definitions.py  verify_dagster_definitions.sh
workers/data-pipeline/src/groceryview_data_pipeline/: definitions.py  jobs.py  schedules.py
workers/data-pipeline/src/groceryview_data_pipeline/assets/: normalize_prices.py  retailer_fetch.py  rollups.py  seed_catalog.py  source_runs.py
workers/data-pipeline/src/groceryview_data_pipeline/checks/: quality_checks.py
workers/data-pipeline/src/groceryview_data_pipeline/resources/: database.py  object_storage.py  settings.py
workers/data-pipeline/src/groceryview_data_pipeline/schemas/: observations.py
workers/data-pipeline/src/groceryview_data_pipeline/scrapers/: base.py  city_gross.py  coop.py  hemkop.py  ica.py  lidl.py  open_food_facts.py  willys.py
workers/data-pipeline/tests/: conftest.py  test_assets.py  test_dagster_smoke.py  test_definitions.py  test_observation_schemas.py
(+2166 files in other folders)
