[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "groceryview-data-pipeline"
version = "0.1.0"
description = "Dagster data pipeline for GroceryView Stockholm grocery price intelligence."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [{ name = "GroceryView" }]
dependencies = [
  "dagster",
  "dagster-webserver",
  "dagster-postgres",
  "pydantic",
  "pydantic-settings",
  "psycopg[binary]",
  "sqlalchemy",
  "pandas",
  "httpx",
  "beautifulsoup4",
  "python-dotenv",
  "tenacity",
  "orjson",
  "minio",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
  "types-beautifulsoup4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.dagster]
module_name = "groceryview_data_pipeline.definitions"

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
plugins = ["pydantic.mypy"]
